add test and small fix
